# docs/swagger.json
@@ -63,6 +63,33 @@
                 }
             }
         },
+        "/v1/links/redirect/{code}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "link"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Shorten link key",
+                        "name": "code",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "302": {
+                        "description": "Found"
+                    }
+                }
+            }
+        },
         "/v1/links/shorten": {
             "post": {
                 "description": "Generate shorten url based on original url that last upto 7 days",
@@ -104,9 +131,14 @@
     "definitions": {
         "handler.shortenLinkInput": {
             "type": "object",
+            "required": [
+                "exp",
+                "url"
+            ],
             "properties": {
                 "exp": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 604800
                 },
                 "url": {
                     "type": "string"
